feat: habilitando o compartilhamento do dashboard financeiro

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p style="text-align: justify;">
                     Acompanhar receita, custo e margem ao longo do tempo, analisando por ano e mês, linha de produto, vendedor, supervisor, além de identificar os produtos de melhor desempenho.
                 </p>
-                <a href="https://app.powerbi.com/links/XLVuJ4e_wU?ctid=ee891e5a-a2c7-4306-92e8-44a920c741b2&pbi_source=linkShare" class="botao" target="_blank">Acessar Dashboard</a>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiZmJkZDMwNzQtZTIzNS00MjljLWJhZGQtNmNhMmZiNmI3NGIyIiwidCI6ImVlODkxZTVhLWEyYzctNDMwNi05MmU4LTQ0YTkyMGM3NDFiMiJ9" class="botao" target="_blank">Acessar Dashboard</a>
                 <!-- <button id="trocar-imagem" class="botao">Trocar Imagem</button> -->
             </div>
         </div>
